# Futures-UChicago-Project

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: pair_selection.md  signals.md  spread_model.md
outputs/tables/: cointegration_robustness.csv  coverage.csv  pair_ranking.csv  spread_constructions.csv  spread_model_stability.csv  spread_model_summary.csv  spread_vol_by_year.csv  spread_vol_by_year_cl_bz.csv
src/analysis/: exploratory_analysis.py
src/data/: ingest.py  panel.py
src/models/: spread.py
src/strategy/: signals.py
tests/: test_exploratory_analysis.py  test_signals.py  test_spread_model.py
